# coproto

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  build.py  coproto.sln  readme.md
cmake/: Config.cmake.in  buildOptions.cmake  coprotoConfig.cmake  coprotoConfigVersion.cmake  coprotoFindBuildDir.cmake  coprotoFindDeps.cmake
cmake/testProject/: CMakeLists.txt  src.cpp
coproto/: Async.cpp  Async.h  AwaitProto.cpp  AwaitProto.h  BasicSocket.cpp  BasicSocket.h  Buffers.cpp  Buffers.h  CMakeLists.txt  Defines.h  EndOfRound.h  InlinePoly.cpp  InlinePoly.h  InlineStorage.cpp  InlineStorage.h  InlineVector.cpp  InlineVector.h  LocalEvaluator.cpp  LocalEvaluator.h  LocalExecutor.cpp  LocalExecutor.h  LocalScheduler.cpp  LocalScheduler.h  Macros.h  Name.h  NativeProto.cpp  NativeProto.h  OcChannelAdapter.cpp  OcChannelAdapter.h  Optional.h  Proto.cpp  Proto.h  Queue.h  Result.h  Resumable.cpp  Resumable.h  Scheduler.cpp  Scheduler.h  Socket.cpp  Socket.h  (+16 more)
coproto/Common/: Util.cpp
coproto/Proto/: Buffers.h
coproto/Socket/: LocalSocket.h  SocketScheduler.h
coprotoTests/: CMakeLists.txt  ExampleProtocols.cpp  ExampleProtocols.h  SocketTutorial.cpp  SocketTutorial.h  coprotoTests  coprotoTests.vcxproj  cpp11Tutorial.cpp  cpp11Tutorial.h  cpp20Tutorial.cpp  cpp20Tutorial.h  main.cpp
tests/: TaskProto14_tests.cpp
